--- a/platformio.ini
+++ b/platformio.ini
@@ -23,7 +23,7 @@ lib_deps = ;lvgl
            ;STM32FreeRTOS-10.3.2
            ;lvglDrivers
 lib_ignore = app_hal
-build_flags = -DHAL_SDRAM_MODULE_ENABLED -DHAL_LTDC_MODULE_ENABLED -DHAL_DCMI_MODULE_ENABLED -DHAL_DMA2D_MODULE_ENABLED -DLV_CONF_INCLUDE_SIMPLE -Ilib/lvgl -Iinclude Isrc
+build_flags = -DHAL_SDRAM_MODULE_ENABLED -DHAL_LTDC_MODULE_ENABLED -DHAL_DCMI_MODULE_ENABLED -DHAL_DMA2D_MODULE_ENABLED -DLV_CONF_INCLUDE_SIMPLE -Ilib/lvgl -Iinclude -Isrc
 monitor_speed = 115200
 
 [env:emulator_64bits]
